--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -16,7 +16,7 @@
 
     <!-- Provide more sutable information show in google search -->
     <title>Collections - Cultural and Literary Animal Studies</title>
-    <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index all books by collections"/>
+    <meta name="description" lang="en" content="The CLAS Digital searchable document archive: index all documents by collections"/>
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
