--- a/web/catalogue/collections/template_collection.html
+++ b/web/catalogue/collections/template_collection.html
@@ -16,7 +16,7 @@
 
     <!-- Provide more sutable information show in google search -->
     <title>{{pillar.name}} - Cultural and Literary Animal Studies</title>
-    <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all books in collection {{pillar.name}}"/>
+    <meta name="description" lang="en" content="The CLAS Digital searchable document archive: index of all documents in collection {{pillar.name}}"/>
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
@@ -41,7 +41,7 @@
 
 	<article class="main">
 	    <h1>Books in Collection: {{pillar.name}}</h1>
-	    <p>{{ length(books) }} books in this collection</p>
+	    <p>{{ length(books) }} documents in this collection</p>
 	    {% include "../search_template.html" %}
 
 	    <ol>
