--- a/web/catalogue/years/template.html
+++ b/web/catalogue/years/template.html
@@ -16,7 +16,7 @@
 
     <!-- Provide more sutable information show in google search -->
     <title>Years - Cultural and Literary Animal Studies</title>
-    <meta name="description" lang="en" content="The CLAS Digital searchable book archive: index of all books by year."/>
+    <meta name="description" lang="en" content="The CLAS Digital searchable document archive: index of all documents by year."/>
 
     <script src="/Search.js"></script>
     <script src="/user.js"></script>
@@ -38,7 +38,7 @@
 	<article class="main">
 
 	    <h1>Catalogue: Years</h1>
-	    <p>Found books from {{ length(years) }} distinct years</p>
+	    <p>Found documents from {{ length(years) }} distinct years</p>
 	    {% include "../search_template.html" %}
 
 	    <ol>
